- Patch #1387572 by pbull, tarekdj: Fixed node links are not left aligned in bartik theme on RTL direction.

--- a/themes/bartik/css/style-rtl.css
+++ b/themes/bartik/css/style-rtl.css
@@ -96,6 +96,7 @@ ul.tips {
   float: right;
 }
 .link-wrapper {
+  text-align: left;
   margin-right: 236px;
   margin-left: 0;
 }
